# tapis-cli

./: .dockerignore  .env.sample  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  AUTHORS  ChangeLog  Dockerfile  LICENSE  LICENSE.txt  Makefile  NOTICE.txt  README.rst  TESTING.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: design.md
docker/: .dockerprompt  docker_push.sh  pip.conf
docs/: Makefile  conf.py  contents.rst  index.rst  requirements.txt  settings.rst  smartsearch.rst  usage.rst
docs/_build/doctrees/: contents.doctree  environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  tapis_cli.doctree  tapis_cli.settings.doctree
docs/_build/html/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: contents.rst.txt
docs/_build/html/source/: modules.html  tapis_cli.html  tapis_cli.settings.html
docs/_build/man/: TapisCLI.1
docs/configure/: index.rst
docs/developing/: command101.rst  index.rst  newcommand.rst
docs/getting-started/: initializing.rst  installing.rst  tutorials.rst
docs/introduction/: get-in-touch.rst  release-notes.rst  roadmap.rst  what-is-tapis-cli.rst
docs/projects/: app_ini.rst  deploy.rst  git.rst  index.rst  init.rst  structure.rst  tutorials.rst
docs/smartsearch/: index.rst
docs/source/: modules.rst  tapis_cli.clients.api.rst  tapis_cli.clients.basic.rst  tapis_cli.clients.nonce.rst  tapis_cli.clients.oauth.rst  tapis_cli.clients.rst  tapis_cli.clients.services.gitlab.rst  tapis_cli.clients.services.gitlab.v4.rst  tapis_cli.clients.services.registry.rst  tapis_cli.clients.services.registry.v2.rst  tapis_cli.clients.services.rst  tapis_cli.clients.services.taccapis.rst  tapis_cli.clients.services.taccapis.v1.rst  tapis_cli.clients.services.taccapis.v2.rst  tapis_cli.clients.services.taccapis.v3.rst  tapis_cli.commands.gitlab.rst  tapis_cli.commands.gitlab.v4.rst  tapis_cli.commands.local.rst  tapis_cli.commands.local.settings.rst  tapis_cli.commands.registry.rst  tapis_cli.commands.registry.v2.rst  tapis_cli.commands.rst  tapis_cli.commands.taccapis.model.rst  tapis_cli.commands.taccapis.model.v2.rst  tapis_cli.commands.taccapis.rst  tapis_cli.commands.taccapis.v1.rst  tapis_cli.commands.taccapis.v1.tas.rst  tapis_cli.commands.taccapis.v2.actors.deploy.rst  tapis_cli.commands.taccapis.v2.actors.helpers.rst  tapis_cli.commands.taccapis.v2.actors.init.rst  tapis_cli.commands.taccapis.v2.actors.manage.rst  tapis_cli.commands.taccapis.v2.actors.models.rst  tapis_cli.commands.taccapis.v2.actors.rst  tapis_cli.commands.taccapis.v2.apim.gitserver.rst  tapis_cli.commands.taccapis.v2.apim.models.rst  tapis_cli.commands.taccapis.v2.apim.registry.rst  tapis_cli.commands.taccapis.v2.apim.rst  tapis_cli.commands.taccapis.v2.apps.deploy.rst  tapis_cli.commands.taccapis.v2.apps.helpers.rst  tapis_cli.commands.taccapis.v2.apps.init.rst  (+37 more)
docs/templating/: index.rst
docs/usage/: actors.rst  apim.rst  apps.rst  config.rst  files.rst  info.rst  jobs.rst  meta.rst  metadata.rst  notifications.rst  overview.rst  postits.rst  profiles.rst  settings.rst  systems.rst
scripts/: github-create-issues.py
tapis_cli/: __about__.py  __init__.py  constants.py  display.py  firstrun.py  githelper.py  main.py  statuses.py  user_agent.py  utils.py  versions.py
tapis_cli/clients/: __init__.py  http.py
tapis_cli/clients/api/: tapis_oauth.py
tapis_cli/clients/basic/: __init__.py  main.py
tapis_cli/clients/nonce/: __init__.py  main.py
tapis_cli/clients/oauth/: __init__.py  bearer.py  impersonate.py  keysecret.py  refresh.py
tapis_cli/clients/services/: __init__.py  mixins.py
tapis_cli/clients/services.orig/: mixins.py
tapis_cli/clients/services.orig/gitlab/: __init__.py
tapis_cli/clients/services.orig/registry/: __init__.py
tapis_cli/clients/services/gitlab/: __init__.py
tapis_cli/clients/services/taccapis/: __init__.py
tapis_cli/commands/gitlab/: __init__.py
tapis_cli/commands/gitlab/v4/: __init__.py
tapis_cli/commands/local/: __init__.py  settings_list.py  variables.py  versions.py
tapis_cli/commands/local/settings/: __init__.py  get.py  list.py  mixins.py  set.py  unset.py
tapis_cli/commands/registry/: __init__.py
tapis_cli/commands/registry/v2/: __init__.py
tapis_cli/commands/taccapis/: __init__.py  __model.py  entity.py  formatters.py  model.py  searchable.py
tapis_cli/commands/taccapis/v1/: __init__.py
tapis_cli/commands/taccapis/v2/: __init__.py  pem.py
tapis_cli/commands/taccapis/v3/: __init__.py
tapis_cli/et/: __init__.py  phone_home.py
tapis_cli/hashcache/: __init__.py  jsoncache.py  lru_py27.py  picklecache.py
tapis_cli/mocks/: __init__.py
tapis_cli/project_ini/: __init__.py  config_file.py  templating.py
tapis_cli/project_ini/mixins/: __init__.py
tapis_cli/project_ini/schema/: __init__.py  actor.py  app.py  docker.py  git.py  job.py  system.py
tapis_cli/search/: __init__.py  argdef.py  argmod.py  argtype.py  arrowspan.py  mongoql.py  param.py  searcharg.py
tapis_cli/settings/: __init__.py  abaco.py  agave.py  aloe.py  auth.py  config.py  debug.py  display.py  gitlab.py  gitserver.py  google.py  helpers.py  jupyter.py  organization.py  projects.py  redact.py  registry.py  ssh.py
tapis_cli/settings/taccapis/: __init__.py  v1.py  v2.py  v3.py
tapis_cli/templating/: __init__.py  settings.py
tapis_cli/templating/variables/: __init__.py  cli.py  date.py  date_time.py  git.py  posix.py
tests/: conftest.py  test_000_import.py  test_001_settings.py  test_002_clients.py  test_003_command_descriptions.py  test_003_commands.py  test_007_hashcache.py  test_00_fixtures.py  test_012_utils.py  test_013_et.py  test_014_templating.py  test_015_project_ini.py
tests/data/commands/actors/: .ACTOR_ID  .actorid  reactor.rc
tests/data/commands/apps/: project.ini  (+2 more)
tests/data/project_ini/: project-01.ini  project.ini
tests/data/settings/: __init__.py
tests/fixtures/: __init__.py  auth.py  cliff.py  settings.py  temp_dirs.py
(+301 files in other folders)
