# As per PEP 566
[metadata]
name = tapis_cli
summary = Scripting interface to the Tapis platform. Documentation at https://tapis-cli.rtfd.io/
description-file = README.rst
author = Matthew Vaughn, Erik Ferlanti, John Fonner, William Allen, Joshua Urrutia, Shweta Gopaulakrishna
maintainer-email = "TACC Help" <help@tacc.cloud>
author-email = "TACC Opensource" <opensource@tacc.cloud>
home-page = https://github.com/TACC-Cloud/tapis-cli-ng
zip_safe = False
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = faas, rest, web service, openapi, swagger, serverless
license = LICENSE.txt
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[build_sphinx]
builders = html,man
all-files = 1
source-dir = docs
build-dir = docs/_build

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes =
    setup.py

[pylint]
disable = W0614,C0103,C0111
ignore = migrations
ignore-docstrings = yes
output-format = colorized

[flake8]
include = tapis_cli
exclude = build,dist,docs/conf.py,*.egg-info,tests
ignore = E402,E501,F401,F403,E402,E302,E305,811
max-line-length = 140
max-complexity = 10
verbose = 0
jobs = 2
statistics = True

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true

[tool:pytest]
python_files = test_*.py
norecursedirs = env _build tmp* offline .git *.egg-info
testpaths = tests/
addopts = -p no:warnings --cov=tapis_cli --cov-report term
log_cli_level = ERROR
flakes-ignore =
    *.py UnusedImport ImportStarUsed

[coverage:run]
omit =

[files]
packages =
    tapis_cli

[entry_points]
console_scripts =
    tapis = tapis_cli.main:main
tapis.cli =
    info_vars_list = tapis_cli.commands.local.variables:VariablesList
    info_vars_init = tapis_cli.commands.local.variables:VariablesInit
    info_versions = tapis_cli.commands.local.versions:Version
    info_status = tapis_cli.commands.local.statuses:Status
    config_list = tapis_cli.commands.local.settings:SettingsList
    config_get = tapis_cli.commands.local.settings:SettingsGet
    config_set = tapis_cli.commands.local.settings:SettingsSet
    config_unset = tapis_cli.commands.local.settings:SettingsUnset
    auth_init = tapis_cli.commands.taccapis.v2.apim:AuthInit
    auth_show = tapis_cli.commands.taccapis.v2.apim:AuthShow
    # auth_clients_show = tapis_cli.clients.basic:BasicHTTPFormatOne
    # auth_clients_list = tapis_cli.clients.basic:BasicHTTPFormatMany
    # auth_clients_create = tapis_cli.clients.basic:BasicHTTPFormatOne
    # auth_clients_delete = tapis_cli.clients.basic:BasicHTTPFormatOne
    auth_tokens_create = tapis_cli.commands.taccapis.v2.apim:TokenCreate
    auth_tokens_refresh = tapis_cli.commands.taccapis.v2.apim:TokenRefresh
    apps_create = tapis_cli.commands.taccapis.v2.apps:AppsCreate
    apps_update = tapis_cli.commands.taccapis.v2.apps:AppsUpdate
    apps_show = tapis_cli.commands.taccapis.v2.apps:AppsShow
    apps_search = tapis_cli.commands.taccapis.v2.apps:AppsSearch
    apps_list = tapis_cli.commands.taccapis.v2.apps:AppsList
    apps_clone = tapis_cli.commands.taccapis.v2.apps:AppsClone
    apps_init = tapis_cli.commands.taccapis.v2.apps:AppsInit
    apps_deploy = tapis_cli.commands.taccapis.v2.apps:AppsDeploy
    apps_publish = tapis_cli.commands.taccapis.v2.apps:AppsPublish
    apps_unpublish = tapis_cli.commands.taccapis.v2.apps:AppsUnpublish
    apps_enable = tapis_cli.commands.taccapis.v2.apps:AppsEnable
    apps_disable = tapis_cli.commands.taccapis.v2.apps:AppsDisable
    apps_history = tapis_cli.commands.taccapis.v2.apps:AppsHistory
    apps_pems_list = tapis_cli.commands.taccapis.v2.apps:AppsPemsList
    apps_pems_show = tapis_cli.commands.taccapis.v2.apps:AppsPemsShow
    apps_pems_grant =  tapis_cli.commands.taccapis.v2.apps:AppsPemsGrant
    apps_pems_revoke =  tapis_cli.commands.taccapis.v2.apps:AppsPemsRevoke
    # apps_pems_drop = tapis_cli.commands.taccapis.v2.apps:AppsPemsDrop
    files_copy = tapis_cli.commands.taccapis.v2.files:FilesCopy
    files_delete = tapis_cli.commands.taccapis.v2.files:FilesDelete
    files_history = tapis_cli.commands.taccapis.v2.files:FilesHistory
    # files_import = tapis_cli.clients.services:TaccApisFormatMany
    files_list = tapis_cli.commands.taccapis.v2.files:FilesList
    files_show = tapis_cli.commands.taccapis.v2.files:FilesShow
    files_download = tapis_cli.commands.taccapis.v2.files:FilesDownload
    files_mkdir = tapis_cli.commands.taccapis.v2.files:FilesMakeDir
    files_move = tapis_cli.commands.taccapis.v2.files:FilesMove
    files_pems_list = tapis_cli.commands.taccapis.v2.files:FilesPemsList
    files_pems_show = tapis_cli.commands.taccapis.v2.files:FilesPemsShow
    files_pems_grant = tapis_cli.commands.taccapis.v2.files:FilesPemsGrant
    files_pems_revoke = tapis_cli.commands.taccapis.v2.files:FilesPemsRevoke
    files_pems_drop = tapis_cli.commands.taccapis.v2.files:FilesPemsDrop
    # files_rename = tapis_cli.clients.services:TaccApisFormatOne
    files_upload = tapis_cli.commands.taccapis.v2.files:FilesUpload
    jobs_show = tapis_cli.commands.taccapis.v2.jobs:JobsShow
    jobs_list = tapis_cli.commands.taccapis.v2.jobs:JobsList
    jobs_status = tapis_cli.commands.taccapis.v2.jobs:JobsStatus
    jobs_search = tapis_cli.commands.taccapis.v2.jobs:JobsSearch
    jobs_history = tapis_cli.commands.taccapis.v2.jobs:JobsHistory
    jobs_submit = tapis_cli.commands.taccapis.v2.jobs:JobsSubmit
    jobs_resubmit = tapis_cli.commands.taccapis.v2.jobs:JobsResubmit
    jobs_cancel = tapis_cli.commands.taccapis.v2.jobs:JobsCancel
    jobs_init = tapis_cli.commands.taccapis.v2.jobs:JobsInit
    jobs_outputs_list = tapis_cli.commands.taccapis.v2.jobs:JobsOutputsList
    jobs_outputs_download = tapis_cli.commands.taccapis.v2.jobs:JobsOutputsDownload
    jobs_hide = tapis_cli.commands.taccapis.v2.jobs:JobsHide
    jobs_unhide = tapis_cli.commands.taccapis.v2.jobs:JobsUnhide
    jobs_pems_list = tapis_cli.commands.taccapis.v2.jobs:JobsPemsList
    jobs_pems_grant = tapis_cli.commands.taccapis.v2.jobs:JobsPemsGrant
    jobs_pems_revoke = tapis_cli.commands.taccapis.v2.jobs:JobsPemsRevoke
    jobs_pems_drop = tapis_cli.commands.taccapis.v2.jobs:JobsPemsDrop
    jobs_pems_show = tapis_cli.commands.taccapis.v2.jobs:JobsPemsShow
    meta_create = tapis_cli.commands.taccapis.v2.metadata:MetadataCreate
    meta_delete = tapis_cli.commands.taccapis.v2.metadata:MetadataDelete
    meta_update = tapis_cli.commands.taccapis.v2.metadata:MetadataUpdate
    meta_list = tapis_cli.commands.taccapis.v2.metadata:MetadataList
    meta_show = tapis_cli.commands.taccapis.v2.metadata:MetadataShow
    meta_search = tapis_cli.commands.taccapis.v2.metadata:MetadataSearch
    meta_pems_list = tapis_cli.commands.taccapis.v2.metadata:MetadataPemsList
    meta_pems_show = tapis_cli.commands.taccapis.v2.metadata:MetadataPemsShow
    meta_pems_grant = tapis_cli.commands.taccapis.v2.metadata:MetadataPemsGrant
    meta_pems_revoke = tapis_cli.commands.taccapis.v2.metadata:MetadataPemsRevoke
    meta_pems_drop = tapis_cli.commands.taccapis.v2.metadata:MetadataPemsDrop
    notifications_list = tapis_cli.commands.taccapis.v2.notifications:NotificationsList
    notifications_show = tapis_cli.commands.taccapis.v2.notifications:NotificationsShow
    notifications_delete = tapis_cli.commands.taccapis.v2.notifications:NotificationsDelete
    postits_create = tapis_cli.commands.taccapis.v2.postits:PostItsCreate
    postits_delete = tapis_cli.commands.taccapis.v2.postits:PostItsDelete
    postits_list = tapis_cli.commands.taccapis.v2.postits:PostItsList
    profiles_show = tapis_cli.commands.taccapis.v2.profiles:ProfilesShow
    profiles_show_self = tapis_cli.commands.taccapis.v2.profiles:ProfilesShowSelf
    profiles_search = tapis_cli.commands.taccapis.v2.profiles:ProfilesSearch
    systems_list = tapis_cli.commands.taccapis.v2.systems:SystemsList
    systems_search = tapis_cli.commands.taccapis.v2.systems:SystemsSearch
    systems_show = tapis_cli.commands.taccapis.v2.systems:SystemsShow
    systems_status = tapis_cli.commands.taccapis.v2.systems:SystemsStatus
    systems_history = tapis_cli.commands.taccapis.v2.systems:SystemsHistory
    systems_create = tapis_cli.commands.taccapis.v2.systems:SystemsCreate
    systems_update = tapis_cli.commands.taccapis.v2.systems:SystemsUpdate
    systems_enable = tapis_cli.commands.taccapis.v2.systems:SystemsEnable
    systems_disable = tapis_cli.commands.taccapis.v2.systems:SystemsDisable
    systems_publish = tapis_cli.commands.taccapis.v2.systems:SystemsPublish
    systems_unpublish = tapis_cli.commands.taccapis.v2.systems:SystemsUnpublish
    systems_queues_list = tapis_cli.commands.taccapis.v2.systems:SystemsQueuesList
    systems_default_set = tapis_cli.commands.taccapis.v2.systems:SystemsDefaultSet
    systems_default_unset = tapis_cli.commands.taccapis.v2.systems:SystemsDefaultUnset
    # systems_queues_create = tapis_cli.mocks:FormatOne
    # systems_queues_update = tapis_cli.mocks:FormatOne
    # systems_queues_delete = tapis_cli.mocks:FormatOne
    # systems_queues_disable = tapis_cli.mocks:FormatOne
    # systems_queues_enable = tapis_cli.mocks:FormatOne
    systems_roles_list = tapis_cli.commands.taccapis.v2.systems:SystemsRolesList
    systems_roles_show = tapis_cli.commands.taccapis.v2.systems:SystemsRolesShow
    systems_roles_grant = tapis_cli.commands.taccapis.v2.systems:SystemsRolesGrant
    systems_roles_revoke = tapis_cli.commands.taccapis.v2.systems:SystemsRolesRevoke
    systems_roles_drop = tapis_cli.commands.taccapis.v2.systems:SystemsRolesDrop
    actors_list = tapis_cli.commands.taccapis.v2.actors:ActorsList
    actors_show = tapis_cli.commands.taccapis.v2.actors:ActorsShow
    actors_delete = tapis_cli.commands.taccapis.v2.actors:ActorsDelete
    actors_pems_list = tapis_cli.commands.taccapis.v2.actors:ActorsPemsList
    actors_pems_grant = tapis_cli.commands.taccapis.v2.actors:ActorsPemsGrant
    actors_pems_revoke = tapis_cli.commands.taccapis.v2.actors:ActorsPemsRevoke
    actors_pems_show = tapis_cli.commands.taccapis.v2.actors:ActorsPemsShow
    actors_workers_list = tapis_cli.commands.taccapis.v2.actors:ActorsWorkersList
    actors_workers_show = tapis_cli.commands.taccapis.v2.actors:ActorsWorkersShow
    actors_workers_create = tapis_cli.commands.taccapis.v2.actors:ActorsWorkersCreate
    actors_workers_delete = tapis_cli.commands.taccapis.v2.actors:ActorsWorkersDelete
    actors_execs_show = tapis_cli.commands.taccapis.v2.actors:ActorsExecsShow
    actors_execs_list = tapis_cli.commands.taccapis.v2.actors:ActorsExecsList
    actors_execs_logs = tapis_cli.commands.taccapis.v2.actors:ActorsExecsLogs
    actors_aliases_show = tapis_cli.commands.taccapis.v2.actors:ActorsAliasesShow
    actors_aliases_delete = tapis_cli.commands.taccapis.v2.actors:ActorsAliasesDelete
    actors_aliases_list = tapis_cli.commands.taccapis.v2.actors:ActorsAliasesList
    actors_aliases_create = tapis_cli.commands.taccapis.v2.actors:ActorsAliasesCreate
    actors_nonces_show = tapis_cli.commands.taccapis.v2.actors:ActorsNoncesShow
    actors_nonces_list = tapis_cli.commands.taccapis.v2.actors:ActorsNoncesList
    actors_nonces_delete = tapis_cli.commands.taccapis.v2.actors:ActorsNoncesDelete
    actors_nonces_create = tapis_cli.commands.taccapis.v2.actors:ActorsNoncesCreate
    actors_submit = tapis_cli.commands.taccapis.v2.actors:ActorsSubmit
    actors_run = tapis_cli.commands.taccapis.v2.actors:ActorsRun
    # actors_init = tapis_cli.clients.services:TaccApisFormatOne
    # actors_create = tapis_cli.clients.services:TaccApisFormatOne
    # actors_deploy = tapis_cli.clients.services:TaccApisFormatOne
    # actors_update = tapis_cli.clients.services:TaccApisFormatOne
    # actors_execs_stop = tapis_cli.mocks:FormatOne
    # actors_pems_drop = tapis_cli.mocks:FormatMany
